<resources>
    <string name="app_name">food</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_title">Home</string>
    <string name="favorite_title">Favorite</string>
    <string name="profile_title">Profile</string>
    <string name="title">Explor Some \nRecipe</string>
    <string name="search">Search</string>
    <string name="sh_title">Search Eny Recipes</string>
    <string name="content_description_search">Image for search Icon</string>
    <string name="instructions">Instructions</string>
    <string name="summary">Summary</string>
    <string name="dish_time_ready">%s min</string>
    <string name="dish_servings">%s serving</string>
    <string name="dish_dollar">%s </string>
    <string name="image">image</string>
    <string name="whats_up">Whats Up</string>
    <string name="instagram">Instagram</string>
    <string name="telegram">Telegram</string>
    <string name="do_you_want_see_more">Do You want see more ?</string>
    <string name="msg_already_added_to_favorites">You have deleted the dish on your favorites.</string>
    <string name="msg_added_to_favorites">You have added the dish to your favorites.</string>
</resources>