<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/ll_sheet1"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="2dp"
            android:layout_height="wrap_content"
            tools:ignore="UseCompoundDrawables">
        <TextView
            android:id="@+id/tv_whatsup"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/whats_up"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="@dimen/_10sdp"
            android:textStyle="italic"
            android:layout_margin="@dimen/_10sdp"
            />
            <ImageView
                android:src="@drawable/whatsup"
                app:layout_constraintLeft_toRightOf="@+id/tv_whatsup"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/_10sdp"
                android:contentDescription="@string/image"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_sheet2"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/ll_sheet1"
            app:layout_constraintLeft_toLeftOf="parent"
            android:orientation="horizontal"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_height="wrap_content"
            tools:ignore="UseCompoundDrawables">
            <TextView
                android:id="@+id/tv_instagram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/instagram"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="@dimen/_10sdp"
                android:textStyle="italic"
                android:layout_margin="@dimen/_10sdp"
                />
            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_weight="1"
                app:layout_constraintLeft_toRightOf="@+id/tv_instagram"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/_10sdp"
                android:contentDescription="@string/image"
                android:src="@drawable/instagram"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_sheet3"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_sheet2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            tools:ignore="UseCompoundDrawables">
            <TextView
                android:id="@+id/tv_telegram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/telegram"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black"

                android:textSize="@dimen/_10sdp"
                android:textStyle="italic"
                android:layout_margin="@dimen/_10sdp"
                />
            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                app:layout_constraintLeft_toRightOf="@+id/tv_telegram"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:layout_margin="@dimen/_10sdp"
                android:contentDescription="@string/image"
                android:src="@drawable/telegram"
                />
        </LinearLayout>
        <Button
            android:id="@+id/idBtnDismiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ll_sheet3"
            android:layout_margin="10dp"
            android:text="@string/do_you_want_see_more"
            android:backgroundTint="@color/changed_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textAllCaps="false" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>