<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintVertical_chainStyle="spread_inside"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.HomeFragment"
    >
    <Button
        android:id="@+id/tab_bar"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/title"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/toolbar"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tab_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:textSize="@dimen/_30sdp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/title" />

    <LinearLayout
        android:id="@+id/sh_fl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/rounded_rectangle"
        android:orientation="horizontal"
        android:padding="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        app:layout_constraintTop_toBottomOf="@+id/title">
        <ImageView
            android:id="@+id/sc_icon"
            android:layout_width="@dimen/_25sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_gravity="start|center"
            android:contentDescription="@string/content_description_search"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/ic_search"/>

        <EditText
            android:id="@+id/sh_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:background="@null"
            android:hint="@string/sh_title"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/grey_900"
            android:textColorHint="@color/sh_color_hint"
            android:textSize="20sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rl_cate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sh_fl"
        />

</androidx.constraintlayout.widget.ConstraintLayout>