<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/iv_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_30sdp"
        android:contentDescription="@string/content_description_search"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/ic_share"
        android:elevation="@dimen/_10sdp"/>
    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/_10sdp"
        android:contentDescription="@string/content_description_search"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/ic_arrow_back"
        android:elevation="@dimen/_10sdp"/>
    <ScrollView
        android:id="@+id/scroll_for_details"
        android:layout_width="match_parent"
        android:visibility="invisible"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.DishDetailsFragment">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <FrameLayout
                android:id="@+id/fl_dish_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/iv_dish_image"
                    app:shapeAppearanceOverlay="@style/roundedImageView1"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_200sdp"
                    android:background="@drawable/shape_for_details"
                    android:contentDescription="@string/content_description_search"
                    android:scaleType="fitXY"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:background="@drawable/favorite_button_background"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:elevation="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/iv_favor_dish"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/content_description_search"
                        android:src="@drawable/ic_favorite_border"
                        />
                </LinearLayout>
            </FrameLayout>

            <TextView
                android:id="@+id/tv_dish_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/fl_dish_image"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:textColor="@color/changed_color"
                android:textSize="@dimen/_15sdp" />

            <TextView
                android:id="@+id/tv_dish_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_dish_category"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:textColor="#404040"
                android:textSize="@dimen/_22sdp"
                android:textStyle="bold" />
            <LinearLayout
                android:id="@+id/ll_dish"
                android:layout_width="match_parent"
                android:layout_below="@+id/tv_dish_name"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:baselineAligned="false">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:padding="@dimen/_10sdp"
                    android:orientation="vertical"
                    android:layout_height="wrap_content"
                    tools:ignore="UseCompoundDrawables">
                    <ImageView
                        android:layout_width="@dimen/_25sdp"
                        android:src="@drawable/ic_time"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:contentDescription="@string/content_description_search"
                        android:layout_height="@dimen/_25sdp"/>
                    <TextView
                        android:id="@+id/tv_dish_time"
                        android:layout_width="wrap_content"
                        android:textSize="@dimen/_15sdp"
                        android:gravity="center"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:text="@string/dish_time_ready"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:padding="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_height="wrap_content"
                    tools:ignore="UseCompoundDrawables">
                    <ImageView
                        android:layout_width="@dimen/_25sdp"
                        android:src="@drawable/ic_group"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:contentDescription="@string/content_description_search"
                        android:layout_height="@dimen/_25sdp"/>
                    <TextView
                        android:id="@+id/tv_dish_servings"
                        android:textSize="@dimen/_15sdp"
                        android:layout_width="wrap_content"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:text="@string/dish_servings"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:padding="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_height="wrap_content"
                    tools:ignore="UseCompoundDrawables">
                    <ImageView
                        android:layout_width="@dimen/_25sdp"
                        android:src="@drawable/ic_money"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:contentDescription="@string/content_description_search"
                        android:layout_height="@dimen/_25sdp"/>

                    <TextView
                        android:id="@+id/tv_dish_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:text="@string/dish_dollar"
                        android:textSize="@dimen/_15sdp" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_dish_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_dish"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/instructions"
                android:textColor="#4a4a4a"
                android:textSize="@dimen/_20sdp"
                android:textStyle="italic" />
            <TextView
                android:id="@+id/tv_dish_instructions"
                android:layout_width="match_parent"
                android:layout_below="@+id/tv_dish_1"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_25sdp"/>
            <TextView
                android:id="@+id/tv_dish_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_dish_instructions"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:textStyle="italic"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/summary"
                android:textColor="#4a4a4a"
                android:textSize="@dimen/_20sdp" />
            <TextView
                android:id="@+id/tv_dish_summary"
                android:layout_width="match_parent"
                android:layout_below="@+id/tv_dish_2"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_25sdp"/>
        </RelativeLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
